[package]
name = "pulsar-admin-rust"
version = "0.0.1"
edition = "2021"
description = "A Rust-based HTTP client for interacting with the Apache Pulsar REST API"
license = "Apache-2.0"
repository = "https://github.com/protocol-laboratory/pulsar-admin-rust"
homepage = "https://github.com/protocol-laboratory/pulsar-admin-rust"

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "__rustls"] }
serde = "1.0.159"
serde_json = "1.0.95"
tokio = {version = "1.13.0", features = ["full"] }
